--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -17,6 +17,7 @@
         android:text="@string/you_did_it"
         android:textSize="30sp"
         android:textStyle="bold"
+        android:id="@+id/tv_display"
         android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
